<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4sp">

        <ImageView
            android:id="@+id/bc_item_companyImage"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:contentDescription="@string/bc_item_companyimage"
            android:padding="2sp" />

        <TextView
            android:id="@+id/bc_item_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"

            android:layout_marginTop="2dp"

            android:layout_toEndOf="@id/bc_item_companyImage"
            android:layout_toRightOf="@id/bc_item_companyImage"
            android:text="@string/business_card_retracted_name_filler"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bc_item_companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/bc_item_Name"

            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/bc_item_companyImage"

            android:layout_toRightOf="@id/bc_item_companyImage"
            android:text="@string/business_card_retracted_companyName_filler"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/bc_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_delete_black_24dp" />

        <ImageButton
            android:id="@+id/bc_item_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_toStartOf="@+id/bc_item_delete"
            android:layout_toLeftOf="@+id/bc_item_delete"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/ic_star_border_black_24dp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>