<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/head_item_send"
        android:icon="@drawable/ic_nfc_black_24dp"
        android:title="send"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/addManualItem"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="addItem"
        app:showAsAction="ifRoom"/>
</menu>